--- a/install
+++ b/install
@@ -11,7 +11,7 @@
 # 2016.04.21 MRB
 # - Rewrite to be less generic
 
-
+# Create a symbolic link, backing up any files that exist
 link() {
 	local src=$1
 	local dst=$2
@@ -22,24 +22,21 @@ link() {
 			mv ${dst} ${dst}.backup
 		fi
 	fi
-	ln -fsv ${src} ${dst}
+	ln -fsvn ${src} ${dst}
 }
 
-makedir() {
-	local dir=$1
-	echo "Making directory ${dir} ..."
-	if [ -a ${dir} ]; then
-		echo "Backing up ${dir} to ${dir}.backup"
-		mv ${dir} ${dir}.backup
-	fi
-	mkdir ${dir}
-}
- 
-echo "$(basename $0)"
-echo "Make sympolic links in the users home directory to the bash config files and directories"
-
+# Get the current working directory
 CWD="$(cd "$(dirname "$0")" && pwd)"
 
+# Link the vim configuration files and dir
+echo "Make sympolic links in the users home directory to the vim config files and directories"
 link ${CWD}/vimrc ${HOME}/.vimrc
-makedir "${HOME}/.vim"
+link ${CWD}/vim ${HOME}/.vim
 
+# Clone the Vundle plugin manager
+echo "Git clone the Vundle plugin manager..."
+git clone https://github.com/VundleVim/Vundle.vim.git ~/.vim/bundle/Vundle.vim
+
+# Install the plugins
+echo "Install the defined plugins..."
+vim +PluginInstall +qall
