--- a/install
+++ b/install
@@ -23,7 +23,7 @@ link() {
     fi
     if ! [ -a ${dst} ]; then
         echo "Linking file ${dst}"
-        ln -sv ${src} ${dst}
+        ln -sfnv ${src} ${dst}
     fi
 }
 
